Add a foreign type for cairo_region_t.

Based on the patch at
    https://bugzilla.gnome.org/show_bug.cgi?id=667959#c7

* Rebased on master
* Fixes the cairo_region_from_arg signature
* Add check for pycairo region support (only in pycairo master)
* Add some tests

Co-Authored-By: Martin Pitt <martin.pitt@ubuntu.com>
Co-Authored-By: Christoph Reiter <creiter@src.gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=667959